[package]
name = "pixi"
version = "0.0.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

description = "Renderer for 2D games"
homepage = "https://github.com/lain-dono/pixi"
repository = "https://github.com/lain-dono/pixi"
keywords = ["graphics"]
exclude = ["Cargo.lock", "examples/**/*", "tests/**/*", "target/**/*"]

[workspace]
members = [
]

[dependencies]
