[package]
name = "pixi"
version = "0.0.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

description = "Renderer for 2D games"
homepage = "https://github.com/lain-dono/pixi"
repository = "https://github.com/lain-dono/pixi"
keywords = ["graphics"]
exclude = ["Cargo.lock", "examples/**/*", "tests/**/*", "target/**/*"]

[dependencies]
wgpu = "0.5.0"
image = "0.23.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

winit = { version = "0.22.1", optional = true }
futures = { version = "0.3", optional = true }

iced_winit = { git = "https://github.com/hecrj/iced.git", branch = "master", optional = true }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", branch = "master", optional = true }

[features]
default = ["app", "ui"]
app = ["winit", "futures"]
ui = ["iced_winit", "iced_wgpu"]